--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,17 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-    runtimeOnly 'mysql:mysql-connector-java'
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // 오라클 클라우드에 접속하기 위한 라이브러리
+    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
+    implementation 'com.oracle.database.security:osdt_cert'
+    implementation 'com.oracle.database.security:oraclepki'
+    implementation 'com.oracle.database.security:osdt_core'
 }
 
 tasks.named('test') {
