--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
+        globally_quoted_identifiers: true
         format_sql: true
 
 logging:
