--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,11 +11,13 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         globally_quoted_identifiers: true
         format_sql: true
+    database-platform: org.hibernate.dialect.Oracle12cDialect
+    show-sql: true
 
 logging:
   level:
