--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,12 +4,8 @@ spring:
       enabled: always
 
   datasource:
-    hikari:
-      auto-commit: false
-      connection-timeout: 30000
-      keepalive-time: 0
-      maximum-pool-size: 10
-    url: jdbc:oracle:thin:@bibs_high?TNS_ADMIN=/Users/seunggu-sun/Desktop/Wallet_bibs
+#    url: jdbc:oracle:thin:@bibs_high?TNS_ADMIN=/Users/seunggu-sun/Desktop/Wallet_bibs
+    url: jdbc:oracle:thin:@bibs_high?TNS_ADMIN=/home/ubuntu/Wallet_bibs
     username: admin
     password: Wafflebibs1234
     driver-class-name: oracle.jdbc.OracleDriver
@@ -29,7 +25,6 @@ spring:
         format_sql: true
     database-platform: org.hibernate.dialect.MySQL57Dialect
     show-sql: true
-    database: mysql
 
 logging:
   level:
