--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
       enabled: always
 
   datasource:
-#    url: jdbc:oracle:thin:@bibs_high?TNS_ADMIN=/Users/seunggu-sun/Desktop/Wallet_bibs
-    url: jdbc:oracle:thin:@bibs_high?TNS_ADMIN=/home/ubuntu/Wallet_bibs
+    url: jdbc:oracle:thin:@bibs_high?TNS_ADMIN=/Users/seunggu-sun/Desktop/Wallet_bibs
+#    url: jdbc:oracle:thin:@bibs_high?TNS_ADMIN=/home/ubuntu/Wallet_bibs
     username: admin
     password: Wafflebibs1234
     driver-class-name: oracle.jdbc.OracleDriver
@@ -23,7 +23,7 @@ spring:
       hibernate:
         globally_quoted_identifiers: true
         format_sql: true
-    database-platform: org.hibernate.dialect.MySQL57Dialect
+    database-platform: org.hibernate.dialect.Oracle12cDialect
     show-sql: true
 
 logging:
