--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,6 @@ spring:
         format_sql: true
     database-platform: org.hibernate.dialect.Oracle12cDialect
     show-sql: true
+
+server:
+  port: 8081
