--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 
 //    implementation 'mysql:mysql-connector-java:8.0.32'
 
+    // 스웨거 라이브러리
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 
     // 오라클 클라우드에 접속하기 위한 라이브러리
     runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
