--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,5 +26,9 @@ spring:
     database-platform: org.hibernate.dialect.Oracle12cDialect
     show-sql: true
 
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
 server:
   port: 8081
