--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
       enabled: always
 
   datasource:
-#    url: jdbc:oracle:thin:@bibs_high?TNS_ADMIN=/Users/seunggu-sun/Desktop/Wallet_bibs
-    url: jdbc:oracle:thin:@bibs_high?TNS_ADMIN=/home/ubuntu/Wallet_bibs
+    url: jdbc:oracle:thin:@bibs_high?TNS_ADMIN=/Users/seunggu-sun/Desktop/Wallet_bibs
+#    url: jdbc:oracle:thin:@bibs_high?TNS_ADMIN=/home/ubuntu/Wallet_bibs
     username: admin
     password: Wafflebibs1234
     driver-class-name: oracle.jdbc.OracleDriver
@@ -26,9 +26,9 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-  sql:
-    init:
-      mode: always
-      continue-on-error: true
-#      schema-locations: classpath:schema.sql
-#      data-locations: classpath:data.sql
+#  sql:
+#    init:
+#      mode: always
+#      continue-on-error: true
+##      schema-locations: classpath:schema.sql
+##      data-locations: classpath:data.sql
