--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,3 +30,5 @@ spring:
     init:
       mode: always
       continue-on-error: true
+      schema-locations: classpath:schema.sql
+      data-locations: classpath:data.sql
